ensure dropdown menus have contrast with background color

--- a/app/javascript/stylesheets/_base_layout.scss
+++ b/app/javascript/stylesheets/_base_layout.scss
@@ -115,6 +115,7 @@ a {
 
 .dropdown-menu {
   background-color: $primary;
+  color: map-get($theme-text-colors, 'primary');
   &>li {
     padding:0;
   }
